refactor(sql): 重构数据库表结构并优化数据集相关表- 移除多张表中的 AUTO_INCREMENT 属性 - 删除 sys_role 表中多余的测试数据- 更新 sys_dataset 表结构，移除 total 字段 -重新排序 sys_dataset 表中的数据集插入顺序 - 添加 sys_file 表结构 - 在 sys_dataset_item 表中添加 origin_md5 索引